[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Dead2.png" type="Texture" id=1]
[ext_resource path="res://Assets/dead4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Walk3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Dead6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Walk6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Dead3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Walk1.png" type="Texture" id=7]
[ext_resource path="res://Assets/dead5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Walk4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Walk2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Audio/adultdeath_soundeffect.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Dead1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Walk5.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Boss.gd" type="Script" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.2157, 78.5946 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.5794, 77.8465 )

[node name="enemy_boss" type="StaticBody2D"]
position = Vector2( -20.4159, 6.49282 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.456697, 0.460701 )
frames = SubResource( 1 )
animation = "dead"
__meta__ = {
"_edit_group_": true
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 21.1757, 3.67928 )
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.2
one_shot = true

[node name="Aim" type="RayCast2D" parent="."]
position = Vector2( 25, 0 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 410 )

[node name="Limiter" type="Timer" parent="Aim"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="DamageArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.2
bus = "sound effects"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Aim/Limiter" to="." method="_on_Limiter_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
